--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "concurrently": "^6.2.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "joi": "^17.4.0",
@@ -20,8 +21,5 @@
         "mongoose": "^5.12.2",
         "nodemon": "^2.0.7",
         "uniqid": "^5.3.0"
-    },
-    "devDependencies": {
-        "concurrently": "^6.0.2"
     }
 }
