--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_CONNECTION = mongodb+srv://boffa:43237746BackSpin@cluster0.1wrgs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 TOKEN = kjjhvhlklkhggfhjbkjaze21234654876545dfd
+PORT=5000
